--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">MPE-HW3</string>
+    <string name="label">UserInput</string>
 
     <string-array name="themes">
         <item>Default</item>
